--- a/vish/pubspec.yaml
+++ b/vish/pubspec.yaml
@@ -36,11 +36,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   intl: ^0.17.0
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
