--- a/vish/pubspec.yaml
+++ b/vish/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_svg: ^1.1.6
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.4
+  cloud_firestore: ^4.1.0
+  shared_preferences: ^2.0.15
+  http: ^0.13.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
